Clean up and added z-index for modal.backdrop (just to ensure the current default value is not overriden in a future update)

--- a/app/assets/stylesheets/blacklight.css.scss
+++ b/app/assets/stylesheets/blacklight.css.scss
@@ -13,6 +13,9 @@
   z-index: 1050;
 }
 
+.modal-backdrop {
+  z-index: 1040;
+}
 
 .glyphicon-remove {
   visibility: visible !important;
